<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTheme2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/dark"
            android:text="@string/set"
            android:textSize="10sp"
            app:cornerRadius="@dimen/corner_radius" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="350dp"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:textSize="10sp" />

    </LinearLayout>

    <GridLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:columnCount="7">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="20dp"
            android:layout_height="30dp"

            android:layout_columnSpan="7"
            android:layout_gravity="fill_horizontal"

            android:gravity="bottom|right"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/botton_width"
            android:layout_height="80dp"
            android:layout_columnSpan="7"
            android:layout_gravity="fill_horizontal"
            android:background="@color/white"
            android:gravity="bottom|right"
            android:textSize="30sp" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonRezet"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/dark"
            android:text="@string/c"
            app:cornerRadius="@dimen/corner_radius" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonSum"
            android:backgroundTint="@color/red"
            android:text="@string/sum"
            app:cornerRadius="@dimen/botton_width" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonSubstract"
            android:backgroundTint="@color/red"
            android:text="@string/subtract"
            app:cornerRadius="@dimen/botton_width" />

        <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonMultiply"
        android:backgroundTint="@color/red"
        android:text="@string/multiply"
        app:cornerRadius="@dimen/botton_width" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonDivide"
            android:backgroundTint="@color/red"
            android:text="@string/divide"
            app:cornerRadius="@dimen/botton_width" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonEquals"
            android:backgroundTint="@color/red"
            android:text="@string/equals"
            app:cornerRadius="@dimen/botton_width" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonDel"
            android:backgroundTint="@color/dark"
            android:text="@string/del"
            android:textSize="25sp"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button1"
            android:text="@string/_1"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button2"
            android:text="@string/_2"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button3"
            android:text="@string/_3"
            app:cornerRadius="@dimen/corner_radius" />
        <com.google.android.material.button.MaterialButton

            android:id="@+id/button4"
            android:text="@string/_4"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button5"
            android:text="@string/_5"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button6"
            android:text="@string/_6"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonTheme"
            android:backgroundTint="@color/dark"
            android:text="@string/set"

            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:text="@string/_7"
            app:cornerRadius="@dimen/corner_radius" />



        <com.google.android.material.button.MaterialButton

            android:id="@+id/button8"
            android:text="@string/_8"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button9"
            android:text="@string/_9"
            app:cornerRadius="@dimen/corner_radius" />




        <com.google.android.material.button.MaterialButton

            android:id="@+id/button0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/_0"
            app:cornerRadius="@dimen/corner_radius" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonDot"
            android:text="@string/dot"
            app:cornerRadius="@dimen/corner_radius" />



    </GridLayout>


</FrameLayout>