<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8424040">


    <GridLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:columnCount="4">


        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/botton_width"
            android:layout_height="154dp"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:background="@color/white"
            android:gravity="bottom|right"

            android:text="0"
            android:textSize="60dp" />


        <Button
            android:id="@+id/buttonRezet"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="#27292b"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonSum"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="#F9A825"
            android:text="@string/sum"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width"
            app:shapeAppearanceOverlay="@style/Theme.Design.Light" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_7"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_8"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_9"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonSubstract"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="#F9A825"
            android:text="@string/subtract"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_4"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_5"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_6"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="#F9A825"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_1"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_2"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_3"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="#F9A825"
            android:text="@string/divide"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />


        <Button
            android:id="@+id/button0"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/ral7024"
            android:text="@string/_0"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="@color/ral7024"
            android:text="@string/dot"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="@dimen/botton_width"
            android:layout_height="@dimen/botton_height"
            android:backgroundTint="#F9A825"
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:cornerRadius="@dimen/botton_width" />

    </GridLayout>


</FrameLayout>